--- a/vignettes/Redistricting_School_Districts.Rmd
+++ b/vignettes/Redistricting_School_Districts.Rmd
@@ -30,17 +30,17 @@ library(tigris)
 
 First, we want to build a block level dataset. The school district intersects two counties, though almost all of the population in the district comes from Rockland County. create_block_table allows you to build block level datasets with the primary variables needed for redistricting purposes - total population by race and voting age population (VAP) by race.
 ```{r, results = 'hide', eval = FALSE, message = FALSE}
-blocksRockland <- create_block_table(state = 'NY', county = 'Rockland')
-blocksOrange <- create_block_table(state = 'NY', county = 'Orange')
+blockRockland <- create_block_table(state = 'NY', county = 'Rockland')
+blockOrange <- create_block_table(state = 'NY', county = 'Orange')
 
-blocks <- bind_rows(blocksRockland, blocksOrange)
+block <- bind_rows(blockRockland, blockOrange)
 ```
 
 For this vignette, rather than running the above, we use included data. `orange` is a subset of Orange County which intersects with the school district. Rockland is the entire block dataset. These polygons are simplified using `rmapshaper` to make them smaller.
 ```{r}
 data("orange")
 data("rockland")
-blocks <- bind_rows(rockland, orange)
+block <- bind_rows(rockland, orange)
 ```
 
 
@@ -56,38 +56,38 @@ school <- nrcsd
 
 The immediate and common difficulty here is that we have nearly 15,000 blocks, but the target region, in this case the school district outlined in red is significantly smaller than that.
 ```{r}
-blocks %>% ggplot() + 
+block %>% ggplot() + 
   geom_sf() +
   geom_sf(data = school, fill = NA, color = 'red') +
   theme_void()
 ```
 As a first pass, we can use the geo_filter function, which wraps sf's st_intersects and filters only to those that intersect.
 ```{r}
-blocks <- blocks %>% geo_filter(to = school)
+block <- block %>% geo_filter(to = school)
 ```
 
-This drops us down to 852 blocks and is a conservative filtering, as you only need to intersect at a single point.
+This drops us down to 852 block and is a conservative filtering, as you only need to intersect at a single point.
 ```{r}
-blocks %>% mutate(id = row_number()) %>% 
+block %>% mutate(id = row_number()) %>% 
   ggplot() + geom_sf() +
   geom_sf(data = school, fill = NA, color = 'red') 
 ```
 Yet, we probably want to go further than that, getting rid of the various external pieces.
 We can use geo_trim to do just that. First, we want to check what would be thrown away at the default area threshold of 1%. Below, I've first checked what would be trimmed away, by setting bool = TRUE and plotting it.
 ```{r}
-blocks$trim <- blocks %>% geo_trim(to = school, bool = TRUE)
+block$trim <- block %>% geo_trim(to = school, bool = TRUE)
 
-blocks %>% ggplot() + geom_sf(aes(fill = trim)) + 
+block %>% ggplot() + geom_sf(aes(fill = trim)) + 
   geom_sf(data = school, fill = NA, lwd = 1.5)
 ```
 
 To me, it looks like we are subsetting correctly with this threshold, so we actually trim away this time.
 ```{r}
-blocks <- blocks %>% geo_trim(to = school)
+block <- block %>% geo_trim(to = school)
 ```
 And indeed, just plotting the block geographies looks like the school district from before. The edges will be a bit off due to polygon simplification.
 ```{r}
-blocks %>% ggplot() +
+block %>% ggplot() +
   geom_sf() +
   theme_void() + 
   geom_sf(data = school, color = 'red', fill = NA)
@@ -97,7 +97,7 @@ Very often, at this step, we want to consider including information about other 
 ```{r data}
 data("towns")
 
-blocks %>% ggplot() +
+block %>% ggplot() +
   geom_sf() +
   theme_void() +
   geom_sf(data = towns, aes(fill = as.character(ID)))
@@ -105,12 +105,12 @@ blocks %>% ggplot() +
 
 From this, we can then try to match our blocks to towns. I use the default setting, which relies on st_centerish, which comes from st_centroid when the centroid is within the shape and otherwise relies on st_point_on_surface to ensure that we are only matching by points within a shape.
 ```{r}
-matched <- geo_match(from = blocks, to = towns)
+matched <- geo_match(from = block, to = towns)
 ```
 
 Now, I've used the default tiebreaker setting, which assigns all blocks to a town, even if they do not overlap.
 ```{r}
-blocks %>% 
+block %>% 
   ggplot() +
   geom_sf(aes(fill = as.character(matched))) +
   theme_void() +
@@ -118,18 +118,18 @@ blocks %>%
 ```
 So, we want to make two particular edits to the outcome. First, we create a fake Orange County Town for the blocks that come from Orange County, though there are only a few dozen people who live in those blocks.
 ```{r}
-blocks <- blocks %>% mutate(TownID = matched) %>% 
+block <- block %>% mutate(TownID = matched) %>% 
   mutate(TownID = ifelse(county != '087', 8, TownID)) 
 ```
 
-Second, we can see that one block in 7 was matched to 1 because it didn't properly intersect the towns and thus went for the closest town by distance between their centroids. The same issue happened for two blocks in Di
+Second, we can see that one block in 7 was matched to 1 because it didn't properly intersect the towns and thus went for the closest town by distance between their centroids. A similar issue occured for two other blocks.
 
 Now, to figure out what's going on and try to clean it up, we can build an adjacency graph for each block by town and see which pieces are discontinuous.
 
 ```{r, message = FALSE}
-adj <- redist.adjacency(shp = blocks)
+adj <- redist.adjacency(shp = block)
 
-comp <- check_contiguity(adjacency = adj, group = blocks$TownID)
+comp <- check_contiguity(adjacency = adj, group = block$TownID)
 
 which(comp$component > 1)
 ```
@@ -137,29 +137,29 @@ which(comp$component > 1)
 
 Then, using that information, we can figure out three of these need to be renamed.
 ```{r}
-blocks$TownID[409] <- 7
-blocks$TownID[586] <- 2
-blocks$TownID[591] <- 4
+block$TownID[409] <- 7
+block$TownID[586] <- 2
+block$TownID[591] <- 4
 ```
 
 Now all towns are completely connected or contiguous.
 ```{r}
-comp <- check_contiguity(adjacency = adj, group = blocks$TownID)
+comp <- check_contiguity(adjacency = adj, group = block$TownID)
 
 which(comp$component > 1)
 ```
 
 Finally, we have the data in a simulation-ready state! We can now use the adjacency list created above with redist.adjacency to run a simulation using redist.smc. See [the redist package](https://alarm-redist.github.io/) for more information about what's going on here.
 ```{r}
-map <- redist_map(blocks, pop_tol = 0.01, ndists = 7, adj = adj)
+map <- redist_map(block, pop_tol = 0.01, ndists = 7, adj = adj)
 
 sims005 <- redist_smc(map, nsims = 500, counties = TownID, silent = TRUE)
 
 plans <- get_plans_matrix(sims005) %>% unique(MARGIN  = 2)
 
-par <- redist.parity(plans = plans, total_pop = blocks$pop)
+par <- redist.parity(plans = plans, total_pop = block$pop)
 
-comp <- redist.compactness(shp = blocks, plans = plans, adj = adj, measure = 'EdgesRemoved')
+comp <- redist.compactness(shp = block, plans = plans, adj = adj, measure = 'EdgesRemoved')
 
 comp_m <- comp %>% group_by(draw) %>% summarize(mean = mean(EdgesRemoved))
 
@@ -170,7 +170,7 @@ In short, the above uses a Sequential Monte Carlo algorithm to draw 500 compact 
 
 Using that choice of districts, we can then summarize the block level data, using block2prec, but in this case it is summarizing to a ward level.
 ```{r}
-smry <- block2prec(blocks, matches = plans[,pick])
+smry <- block2prec(block, matches = plans[,pick])
 ```
 
 Then we have the basic information we want and we can look at the VAP data to see that we have one majority minority Hispanic ward and one potential coalition ward.
@@ -179,7 +179,7 @@ smry %>% select(matches_id, starts_with('vap'))
 ```
 And finally, we can also use block2prec to join the geometries of the wards to plot:
 ```{r, message = FALSE, warning = FALSE}
-block2prec(blocks, matches = plans[,pick], geometry = TRUE) %>% 
+block2prec(block, matches = plans[,pick], geometry = TRUE) %>% 
   ggplot() + 
   geom_sf() + 
   theme_void() +
