--- a/vignettes/Redistricting_School_Districts.Rmd
+++ b/vignettes/Redistricting_School_Districts.Rmd
@@ -83,15 +83,9 @@ block %>% ggplot() + geom_sf(aes(fill = trim)) +
 
 To me, it looks like we are subsetting correctly with this threshold, so we actually trim away this time.
 ```{r}
-block <- block %>% geo_trim(to = school)
+block <- block %>% filter(trim)
 ```
-And indeed, just plotting the block geographies looks like the school district from before. The edges will be a bit off due to polygon simplification.
-```{r}
-block %>% ggplot() +
-  geom_sf() +
-  theme_void() + 
-  geom_sf(data = school, color = 'red', fill = NA)
-```
+
 
 Very often, at this step, we want to consider including information about other geographies, particularly towns, villages, or counties. In the package, for illustration purposes, I've included a small towns dataset from the [Rockland County GIS Office](https://www.rocklandgis.com/portal/apps/sites/#/data/items/746ec7870a0b4f46b168e07369e79a27).
 ```{r data}
@@ -103,9 +97,9 @@ block %>% ggplot() +
   geom_sf(data = towns, aes(fill = as.character(ID)))
 ```
 
-From this, we can then try to match our blocks to towns. I use the default setting, which relies on st_centerish, which comes from st_centroid when the centroid is within the shape and otherwise relies on st_point_on_surface to ensure that we are only matching by points within a shape.
+From this, we can then try to match our blocks to towns. I use the centroid option, which often works the most quickly. The default method, 'center' is slower, but more accurate.
 ```{r}
-matched <- geo_match(from = block, to = towns)
+matched <- geo_match(from = block, to = towns, method = 'centroid')
 ```
 
 Now, I've used the default tiebreaker setting, which assigns all blocks to a town, even if they do not overlap.
@@ -151,9 +145,9 @@ which(comp$component > 1)
 
 Finally, we have the data in a simulation-ready state! We can now use the adjacency list created above with redist.adjacency to run a simulation using redist.smc. See [the redist package](https://alarm-redist.github.io/) for more information about what's going on here.
 ```{r}
-map <- redist_map(block, pop_tol = 0.01, ndists = 7, adj = adj)
+map <- redist_map(block, pop_tol = 0.02, ndists = 7, adj = adj)
 
-sims005 <- redist_smc(map, nsims = 500, counties = TownID, silent = TRUE)
+sims005 <- redist_smc(map, nsims = 50, counties = TownID, silent = TRUE)
 
 plans <- get_plans_matrix(sims005) %>% unique(MARGIN  = 2)
 
@@ -166,24 +160,13 @@ comp_m <- comp %>% group_by(draw) %>% summarize(mean = mean(EdgesRemoved))
 pick <- tibble(parity = par) %>% bind_cols(comp_m) %>% slice_max(order_by = mean, n = 1) %>% pull(draw)
 ```
 
-In short, the above uses a Sequential Monte Carlo algorithm to draw 500 compact districts that try to preserve towns. From those, I pick a map that is on average, pretty compact.
-
-Using that choice of districts, we can then summarize the block level data, using block2prec, but in this case it is summarizing to a ward level.
-```{r}
-smry <- block2prec(block, matches = plans[,pick])
-```
+In short, the above uses a Sequential Monte Carlo algorithm to draw 50 compact districts that try to preserve towns. From those, I pick a map that is on average, pretty compact. You would typically aim for about 100 times this number of simulations to start. This is shortened for vignette compilation time.
 
 Then we have the basic information we want and we can look at the VAP data to see that we have one majority minority Hispanic ward and one potential coalition ward.
 ```{r}
-smry %>% select(matches_id, starts_with('vap'))
+block %>% 
+  mutate(district = plans[,pick]) %>% 
+  group_by(district) %>% 
+  summarize(across(starts_with('vap'), sum))
 ```
-And finally, we can also use block2prec to join the geometries of the wards to plot:
-```{r, message = FALSE, warning = FALSE}
-block2prec(block, matches = plans[,pick], geometry = TRUE) %>% 
-  ggplot() + 
-  geom_sf() + 
-  theme_void() +
-  geom_sf_label(aes(label = matches_id))
-```
-
 
