--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# geomander <img src='man/figures/logo.png' align="right" height="139" />
+# geomander <a href='https://www.christophertkenny.com/geomander/'><img src='man/figures/logo.png' align="right" height="137" /></a>
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/christopherkenny/geomander/workflows/R-CMD-check/badge.svg)](https://github.com/christopherkenny/geomander/actions)
